# legal-doc-qa

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/api/: query.py  upload.py
app/generation/: generator.py  pipeline.py
app/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py  store.py
app/models/: schemas.py
app/retrieval/: retriever.py
chroma_db/9c502942-bca9-4a4a-b027-cbcebe8e274f/: index_metadata.pickle
docs/: decisions.md  iteration-log.md
scripts/: test_pipeline.py
tests/: test_parser.py
