[project]
name = "legal-doc-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.1",
    "unstructured[pdf]>=0.22.30",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
